# awesome-codex-plugins

./: CONTRIBUTING.md  README.md  plugins.json
.agents/plugins/: marketplace.json
plugins/1139030773-cmd/agent-workflow-system/: README.md
plugins/AUN-PN/SeparateWeb/: LICENSE  README.md  package.json
plugins/AUN-PN/unity-agent-workflows/: package.json
plugins/CALLE-AI/call-e-integrations/: README.md
plugins/CarrotGamesStudios/vidseeds-mcp/: README.md
plugins/Colin4k1024/tsp/: README.md  package-lock.json  package.json
plugins/GanyuanRan/Aegis/: LICENSE  README.md  package.json
plugins/GarethManning/education-agent-skills/: README.md
plugins/Jason-chen-coder/dev-skills/: README.md
plugins/Kanevry/session-orchestrator/: README.md  package-lock.json  package.json
plugins/LVTD-LLC/skills/: README.md  package-lock.json  package.json
plugins/RBraga01/a-team/: README.md
plugins/ValkyrLabs/GrayMatter/: README.md
plugins/Xquik-dev/hermes-tweet/: pyproject.toml
plugins/Xquik-dev/x-twitter-scraper/: README.md  package.json
plugins/archcore-ai/plugin/: .codex.mcp.json  README.md
plugins/avansaber/tailtest-codex/: README.md
plugins/avivsinai/agent-message-queue/: README.md
plugins/avivsinai/jenkins-cli/: README.md
plugins/jerryfane/agentgram/: README.md  pyproject.toml
plugins/jerryfane/agentgram/.codex-plugin/: plugin.json
plugins/jerryfane/agentgram/skills/agentgram/: SKILL.md
plugins/jerryfane/agentgram/src/agentgram_tg/: __init__.py  cli.py  telegram.py
scripts/: generate_plugins_json.py  validate-plugin-pr.py
(+1210 files in other folders)
